5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1601_1800.log
== TEST (2019-03-25 03:35:52) 
-- CODE:
var = float(input("variaveis reais"))
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:36:33) 
-- CODE:
var = float(input("variaveis reais"))
var1= a

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:36:57) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:38:14) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (a ** 2 + b ** 2 + c ** 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:38:38) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:39:01) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
print(round(formula, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 03:39:05) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
print(round(formula, 6))
-- EXECUTION TIME:
0.192023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1800/main.py", line 2, in <module>
    var1= a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:39:34) 
-- CODE:
var = float(input("variaveis reais"))
var1= 2
var2= 4
var3= 6
formula = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
print(round(formula, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    formula = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:40:19) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:40:29) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 03:40:33) 
-- CODE:
var = float(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 6))
-- EXECUTION TIME:
0.148716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1800/main.py", line 2, in <module>
    var1= a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:41:17) 
-- CODE:
var = int(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1= a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 03:41:22) 
-- CODE:
var = int(input("variaveis reais"))
var1= a
var2= b
var3= c
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 6))
-- EXECUTION TIME:
0.163181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1800/main.py", line 2, in <module>
    var1= a
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:40:37) 
-- CODE:

var1= float(input())
var2= float(input())
var3= float(input())
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:40:42) 
-- CODE:

var1= float(input())
var2= float(input())
var3= float(input())
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) // (var1 + var2 + var3)
print(round(formula, 7))
-- EXECUTION TIME:
0.205069
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:41:06) 
-- CODE:

var1= float(input())
var2= float(input())
var3= float(input())
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) / (var1 + var2 + var3)
print(round(formula, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:41:26) 
-- CODE:

var1= float(input())
var2= float(input())
var3= float(input())
formula = (var1 ** 2 + var2 ** 2 + var3 ** 2) / (var1 + var2 + var3)
print(round(formula, 7))
-- EXECUTION TIME:
0.14623
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
